FILE(GLOB COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

IF(USE_GLIB)
	ADD_LIBRARY(${AITT_COMMON} SHARED ${COMMON_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/glib/MainLoopHandler.cc)
ELSE(USE_GLIB)
	ADD_LIBRARY(${AITT_COMMON} SHARED ${COMMON_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/posix/MainLoopHandler.cc)

	IF(NOT PLATFORM STREQUAL "android")
		TARGET_LINK_LIBRARIES(${AITT_COMMON} rt)
	ENDIF()
ENDIF(USE_GLIB)

TARGET_LINK_LIBRARIES(${AITT_COMMON} ${AITT_NEEDS_LIBRARIES} Threads::Threads)
TARGET_COMPILE_OPTIONS(${AITT_COMMON} PRIVATE ${AITT_NEEDS_CFLAGS_OTHER} "-fvisibility=default")
IF(VERSIONING)
	SET_TARGET_PROPERTIES(${AITT_COMMON} PROPERTIES
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION_MAJOR}
		)
ENDIF(VERSIONING)
INSTALL(TARGETS ${AITT_COMMON} DESTINATION ${CMAKE_INSTALL_LIBDIR})
