FILE(GLOB COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

IF(USE_GLIB)
	ADD_DEFINITIONS(-DUSE_GLIB)
	LIST(REMOVE_ITEM COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/PosixMainLoop.cc)
ELSE(USE_GLIB)
	LIST(REMOVE_ITEM COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/GlibMainLoop.cc)

	IF(NOT PLATFORM STREQUAL "android")
		SET(ADDITION_LIB rt)
	ENDIF()
ENDIF(USE_GLIB)

ADD_LIBRARY(${AITT_COMMON} SHARED ${COMMON_SRCS})
TARGET_LINK_LIBRARIES(${AITT_COMMON} ${AITT_NEEDS_LIBRARIES} ${ADDITION_LIB} Threads::Threads)
TARGET_COMPILE_OPTIONS(${AITT_COMMON} PRIVATE ${AITT_NEEDS_CFLAGS_OTHER} "-fvisibility=default")
IF(VERSIONING)
	SET_TARGET_PROPERTIES(${AITT_COMMON} PROPERTIES
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION_MAJOR}
		)
ENDIF(VERSIONING)
INSTALL(TARGETS ${AITT_COMMON} DESTINATION ${CMAKE_INSTALL_LIBDIR})
