file(GLOB COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

if(USE_GLIB)
	add_definitions(-DUSE_GLIB)
	list(REMOVE_ITEM COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/PosixMainLoop.cc)
else(USE_GLIB)
	list(REMOVE_ITEM COMMON_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/GlibMainLoop.cc)

	if(NOT PLATFORM STREQUAL "android")
		set(ADDITION_LIB rt)
	endif()
endif(USE_GLIB)

add_library(${AITT_COMMON} SHARED ${COMMON_SRCS})
target_link_libraries(${AITT_COMMON} ${AITT_NEEDS_LIBRARIES} ${ADDITION_LIB} Threads::Threads)
target_compile_options(${AITT_COMMON} PRIVATE ${AITT_NEEDS_CFLAGS_OTHER} "-fvisibility=default")
if(VERSIONING)
	set_target_properties(${AITT_COMMON} PROPERTIES
		VERSION ${PROJECT_VERSION}
		SOVERSION ${PROJECT_VERSION_MAJOR}
		)
endif(VERSIONING)
install(TARGETS ${AITT_COMMON} DESTINATION ${CMAKE_INSTALL_LIBDIR})
