IF(PLATFORM STREQUAL "android")
    MESSAGE ( WARNING "Required to write CMakefile for Android Platform" )
ELSE(PLATFORM STREQUAL "android")
    SET(AITT_RTSP aitt-stream-rtsp)

    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
    PKG_CHECK_MODULES(AITT_RTSP_NEEDS REQUIRED
        gstreamer-1.0
        gstreamer-video-1.0
    )
    INCLUDE_DIRECTORIES(${AITT_RTSP_NEEDS_INCLUDE_DIRS})
    LINK_DIRECTORIES(${AITT_RTSP_NEEDS_LIBRARY_DIRS})

    FILE(GLOB AITT_RTSP_SRC *.cc)
    list(REMOVE_ITEM AITT_RTSP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Module.cc)
    ADD_LIBRARY(RTSP_OBJ OBJECT ${AITT_RTSP_SRC})
    ADD_LIBRARY(${AITT_RTSP} SHARED $<TARGET_OBJECTS:RTSP_OBJ> Module.cc ../stream_entry.cc)
    TARGET_LINK_LIBRARIES(${AITT_RTSP} ${AITT_RTSP_NEEDS_LIBRARIES} ${AITT_COMMON})
    TARGET_COMPILE_OPTIONS(${AITT_RTSP} PUBLIC ${AITT_RTSP_NEEDS_CFLAGS_OTHER})
    INSTALL(TARGETS ${AITT_RTSP} DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF(PLATFORM STREQUAL "android")
