SET(AITT_TCP aitt-transport-tcp)
SET(AITT_SECURE_TCP aitt-transport-tcp-secure)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(PLATFORM STREQUAL "tizen")
    SET(OPENSSL openssl1.1)
ELSE(PLATFORM STREQUAL "tizen")
    SET(OPENSSL openssl)
ENDIF(PLATFORM STREQUAL "tizen")

PKG_CHECK_MODULES(AITT_TCP_NEEDS REQUIRED ${OPENSSL})
INCLUDE_DIRECTORIES(${AITT_TCP_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${AITT_TCP_NEEDS_LIBRARY_DIRS})

ADD_LIBRARY(TCP_OBJ STATIC TCP.cc TCPServer.cc AESEncryptor.cc)
ADD_LIBRARY(${AITT_TCP} SHARED ../transport_entry.cc Module.cc)
TARGET_LINK_LIBRARIES(${AITT_TCP} Threads::Threads TCP_OBJ ${AITT_COMMON} ${AITT_TCP_NEEDS_LIBRARIES})

IF(PLATFORM STREQUAL "android")
    FIND_PACKAGE(openssl REQUIRED CONFIG)
    TARGET_LINK_LIBRARIES(TCP_OBJ openssl::crypto)
    TARGET_LINK_LIBRARIES(${AITT_TCP} openssl::crypto)
ENDIF(PLATFORM STREQUAL "android")

INSTALL(TARGETS ${AITT_TCP} DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(samples)
    ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTING)
