SET(AITT_TCP aitt-transport-tcp)
SET(AITT_SECURE_TCP aitt-transport-tcp-secure)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(WITH_MBEDTLS)
    ADD_DEFINITIONS(-DWITH_MBEDTLS)
    SET(ENCRYPTOR_SRC AESEncryptor_mbedtls.cc)
ELSE(WITH_MBEDTLS)
    SET(ENCRYPTOR_SRC AESEncryptor_openssl.cc)
ENDIF(WITH_MBEDTLS)

ADD_LIBRARY(TCP_OBJ STATIC TCP.cc TCPServer.cc ${ENCRYPTOR_SRC})

IF(PLATFORM STREQUAL "android")
    FIND_PACKAGE(openssl REQUIRED CONFIG)
    TARGET_LINK_LIBRARIES(TCP_OBJ openssl::crypto)
ELSE(PLATFORM STREQUAL "android")
    IF(PLATFORM STREQUAL "tizen")
        SET(OPENSSL openssl1.1)
    ELSE(PLATFORM STREQUAL "tizen")
        IF(WITH_MBEDTLS)
            TARGET_LINK_LIBRARIES(TCP_OBJ mbedcrypto)
        ELSE(WITH_MBEDTLS)
            SET(OPENSSL openssl)
        ENDIF(WITH_MBEDTLS)
    ENDIF(PLATFORM STREQUAL "tizen")
    PKG_CHECK_MODULES(AITT_TCP_NEEDS REQUIRED ${OPENSSL})
    INCLUDE_DIRECTORIES(${AITT_TCP_NEEDS_INCLUDE_DIRS})
    LINK_DIRECTORIES(${AITT_TCP_NEEDS_LIBRARY_DIRS})
ENDIF(PLATFORM STREQUAL "android")

ADD_LIBRARY(${AITT_TCP} SHARED ../transport_entry.cc Module.cc)
TARGET_LINK_LIBRARIES(${AITT_TCP} Threads::Threads TCP_OBJ ${AITT_COMMON} ${AITT_TCP_NEEDS_LIBRARIES})

INSTALL(TARGETS ${AITT_TCP} DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(tests)
    IF(USE_GLIB)
        ADD_SUBDIRECTORY(samples)
    ENDIF(USE_GLIB)
ENDIF(BUILD_TESTING)
