SET(AITT_WEBRTC aitt-transport-webrtc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

PKG_CHECK_MODULES(AITT_WEBRTC_NEEDS REQUIRED
    capi-media-camera
    capi-media-webrtc
    json-glib-1.0
)
INCLUDE_DIRECTORIES(${AITT_WEBRTC_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${AITT_WEBRTC_NEEDS_LIBRARY_DIRS})

FILE(GLOB AITT_WEBRTC_SRC *.cc)
list(REMOVE_ITEM AITT_WEBRTC_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Module.cc)
ADD_LIBRARY(WEBRTC_OBJ OBJECT ${AITT_WEBRTC_SRC})
ADD_LIBRARY(${AITT_WEBRTC} SHARED $<TARGET_OBJECTS:WEBRTC_OBJ> ../main.cc Module.cc)
TARGET_LINK_LIBRARIES(${AITT_WEBRTC} ${AITT_WEBRTC_NEEDS_LIBRARIES} ${AITT_COMMON})
TARGET_COMPILE_OPTIONS(${AITT_WEBRTC} PUBLIC ${AITT_WEBRTC_NEEDS_CFLAGS_OTHER})

INSTALL(TARGETS ${AITT_WEBRTC} DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTING)
