SET(AITT_WEBRTC aitt-stream-webrtc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

PKG_CHECK_MODULES(AITT_WEBRTC_NEEDS REQUIRED
    capi-media-camera
    capi-media-webrtc
    gstreamer-video-1.0
    json-glib-1.0
)
INCLUDE_DIRECTORIES(${AITT_WEBRTC_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${AITT_WEBRTC_NEEDS_LIBRARY_DIRS})

ADD_LIBRARY(WEBRTC_OBJ OBJECT
    StreamManager.cc
    SrcStreamManager.cc
    SinkStreamManager.cc
    WebRtcMessage.cc
    WebRtcState.cc
    WebRtcStream.cc
)
ADD_LIBRARY(${AITT_WEBRTC} SHARED $<TARGET_OBJECTS:WEBRTC_OBJ> Module.cc ../stream_entry.cc )
TARGET_LINK_LIBRARIES(${AITT_WEBRTC} ${AITT_WEBRTC_NEEDS_LIBRARIES} ${AITT_COMMON})
TARGET_COMPILE_OPTIONS(${AITT_WEBRTC} PUBLIC ${AITT_WEBRTC_NEEDS_CFLAGS_OTHER})

INSTALL(TARGETS ${AITT_WEBRTC} DESTINATION ${CMAKE_INSTALL_LIBDIR})

IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTING)
