PKG_CHECK_MODULES(TCP_SAMPLE_NEEDS REQUIRED flatbuffers glib-2.0)
INCLUDE_DIRECTORIES(${TCP_SAMPLE_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${TCP_SAMPLE_NEEDS_LIBRARY_DIRS})

ADD_EXECUTABLE("aitt_tcp_test" tcp_test.cc $<TARGET_OBJECTS:TCP_OBJ>)
TARGET_LINK_LIBRARIES("aitt_tcp_test" aitt Threads::Threads ${TCP_SAMPLE_NEEDS_LIBRARIES})
INSTALL(TARGETS "aitt_tcp_test" DESTINATION ${AITT_TEST_BINDIR})
