ADD_DEFINITIONS(-DLOG_STDOUT)

PKG_CHECK_MODULES(UT_NEEDS REQUIRED gmock_main)
INCLUDE_DIRECTORIES(${UT_NEEDS_INCLUDE_DIRS})
LINK_DIRECTORIES(${UT_NEEDS_LIBRARY_DIRS})

SET(AITT_TCP_UT ${PROJECT_NAME}_tcp_ut)

SET(AITT_TCP_UT_SRC
     ../TCP.cc ../TCPServer.cc
     TCP_test.cc TCPServer_test.cc
)
ADD_EXECUTABLE(${AITT_TCP_UT} ${AITT_TCP_UT_SRC})
TARGET_LINK_LIBRARIES(${AITT_TCP_UT} ${UT_NEEDS_LIBRARIES} Threads::Threads ${AITT_NEEDS_LIBRARIES})
INSTALL(TARGETS ${AITT_TCP_UT} DESTINATION ${AITT_TEST_BINDIR})

ADD_TEST(
    NAME
        ${AITT_TCP_UT}
    COMMAND
        ${CMAKE_COMMAND} -E env
        ${CMAKE_CURRENT_BINARY_DIR}/${AITT_TCP_UT} --gtest_filter=*_Anytime
)
